--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('./reset.css');
+@import url('./theme.css');
 @import url('http://fonts.cdnfonts.com/css/uber-move-text');
 
 body {
@@ -9,4 +10,8 @@ body {
 html {
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0,0,0,0)
+}
+
+html, body, #root, #wrapper {
+  height: 100%;
 }
