--- a/src/theme.css
+++ b/src/theme.css
@@ -6,6 +6,7 @@
   --theme-background-beige: #fff2d9;
   --theme-text-primary: #000000;
   --theme-text-secondary: rgb(84, 84, 84);
+  --theme-text-grey: rgb(107, 107, 107);
   --theme-font-family: 'Uber Move Text', sans-serif;
   --theme-font-size: 14px;
 }
