[ADD] Implement search bar with useDebounce hook

--- a/src/theme.css
+++ b/src/theme.css
@@ -6,9 +6,12 @@
   --theme-background-beige: #fff2d9;
   --theme-text-primary: #000000;
   --theme-text-secondary: rgb(84, 84, 84);
+  --theme-text-light: #fff;
   --theme-text-grey: rgb(107, 107, 107);
   --theme-font-family: 'Uber Move Text', sans-serif;
   --theme-font-size: 14px;
+
+  --theme-hover-dark: #333333;
 }
 
 html.dark {
